Supernova/Samples/Errors/DividebyZero.nova
Application title = Error.

I want window and window title from (100) / (0).
